# yp_graduate_work

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.dev.yml  mypy.ini  pytest.ini  requirements.linters.txt  setup.cfg
django/movies_admin_panel/app/: docker-entrypoint.dev.sh  docker-entrypoint.sh  pyproject.toml
django/movies_admin_panel/app/config/: settings.py
django/movies_admin_panel/app/src/: apps.py
loyalty/loyalty_panel/: Dockerfile  Dockerfile.dev  README.md  config.py  docker-entrypoint.dev.sh  manage.py  pyproject.toml  pytest.ini
loyalty/loyalty_panel/discount/: admin.py  forms.py  models.py  services.py  views.py
loyalty/loyalty_panel/discount/migrations/: 0001_initial.py  0002_promotionalcampaign_discount_percentage.py  0003_discount_history_updated_at_promocode_updated_at_and_more.py  0004_alter_discount_history_created_and_more.py  0005_alter_promotionalcampaign_validity_period.py
loyalty/loyalty_panel/discount/templates/: token_creation.html
loyalty/loyalty_panel/loyalty_panel/: asgi.py  settings.py  urls.py  wsgi.py
loyalty/loyalty_panel/tests/discount/: test_form.py  test_views.py
notifications/notifications_admin/: Dockerfile  Dockerfile.dev  config.py  manage.py  pyproject.toml  pytest.ini
notifications/notifications_admin/email_distribution/: asgi.py  settings.py  urls.py  wsgi.py
notifications/notifications_admin/mailing/: admin.py  models.py  servises.py  tasks.py  urls.py  views.py
notifications/notifications_admin/mailing/migrations/: 0001_initial.py  0002_mailing_data.py  0003_mailing_list_subject.py  0004_alter_mailing_data_name.py  0005_remove_system_events_id_events.py  0006_mailing_list_day_send_and_more.py  0007_alter_mailing_list_day_send.py  0008_alter_mailing_list_day_send.py  0009_messengers_pushservices_smsoperators_and_more.py  0010_mailing_list_last_sent_time.py  0011_alter_mailing_list_last_sent_time.py  0012_alter_mailing_list_last_sent_time.py
notifications/notifications_admin/templates/admin/: custom_button.html
notifications/notifications_admin/templates/templates/: mail.html  новый_22.txt
notifications/notifications_admin/test/: conftest.py
notifications/notifications_admin/test/mailing/: mailing_type_view_test.py  (+2 more)
notifications/notifications_admin/uml_not/: 222222.puml  Recurring events.puml  Recurring eventsКопия.puml  The manager creates an event.puml
(+284 files in other folders)
