[tool.poetry]
name = "loyalty-panel"
version = "0.1.0"
description = ""
authors = ["BityutskiyNA <BityutskiyNA@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.2"
django = "^4.2.4"
psycopg2 = "^2.9.7"
pytest = "^7.4.0"
pydantic = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
