[tool.poetry]
name = "email-distribution"
version = "0.1.0"
description = ""
authors = ["BityutskiyNA <BityutskiyNA@gmail.com>"]
readme = "README.md"
packages = [{include = "email_distribution"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
psycopg2 = "^2.9.6"
aiormq = "^6.7.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
